Lexer<T>::parseDecimal ought to ASSERT isASCIIDigit https://bugs.webkit.org/show_bug.cgi?id=198156

Reviewed by Keith Miller.

* parser/Lexer.cpp:
(JSC::Lexer<T>::parseDecimal):
Add ASSERT -- apparently the issue with doing so earlier was simply
that m_current can be anything at all when m_buffer8 is non-empty.

(JSC::Lexer<T>::lexWithoutClearingLineTerminator):
Clean up a few things in the vicinity of r245655:
 - fix token enum values in a couple of error cases added in the last patch
 - add UNLIKELY for existing error cases that forgot to use it
 - simplify some control flow


Canonical link: https://commits.webkit.org/212246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245697 268f45cc-cd09-0410-ab3c-d52691b4dbfc